# SkillMatch-AI

./: .dockerignore  .env.example  .env.prod.example  .gitignore  AGENTS.md  CODEx.md  README.md  docker-compose.prod.override.example.yml  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  Dockerfile.prod  alembic.ini  pyproject.toml
backend/alembic/versions/: 20260508_0001_initial_schema.py  20260508_0002_active_resume_profile_type.py  20260508_0003_single_active_resume.py  20260603_0004_profile_analysis.py  20260608_0005_job_search_tasks.py  20260608_0006_retire_legacy_job_sources.py  20260609_0007_job_offer_details.py  20260610_0008_auth_foundation.py  20260611_0009_email_outbox_worker.py  20260611_0010_security_rate_limits.py  20260622_0011_production_integrity_reconciliation.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/commands/: __init__.py  cleanup.py
backend/app/core/: config.py  request_security.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  auth.py  feedback.py  job.py  matching.py  profile.py  resume.py  user.py
backend/app/schemas/: auth.py  feedback.py  job.py  matching.py  public.py  resume.py
backend/app/services/auth/: account_tokens.py  email.py  identifiers.py  rate_limits.py  sessions.py
backend/app/services/cv_processing/: demo_analyzer.py  extractor.py  processor.py  profile_builder.py  storage.py
backend/app/services/email/: __init__.py  contracts.py  crypto.py  outbox.py  providers.py  templates.py
backend/app/services/embeddings/: semantic.py
backend/app/services/jobs_import/: arbeitnow.py  importer.py  infojobs.py  profile_search.py  remotive.py  tecnoempleo.py  upsert.py
backend/app/services/maintenance/: __init__.py  cleanup.py
backend/app/services/matching/: rules.py
backend/app/workers/: __init__.py  email_worker.py
backend/tests/: test_health.py
(+132 files in other folders)
